RESOLVED FIXED48805
[Soup] Random crashes in http/tests/websocket/tests/workers/worker-handshake-challenge-randomness.html
https://bugs.webkit.org/show_bug.cgi?id=48805
Summary [Soup] Random crashes in http/tests/websocket/tests/workers/worker-handshake-...
Martin Robinson
Reported 2010-11-01 16:39:44 PDT
The GTK+ 64-bit Debug bot has seen random crashes. The issue appears to be that active websocket handes are tracked via memory address, which is a not reliable due to reallocations.
Attachments
Patch for this issue (8.90 KB, patch)
2010-11-01 16:48 PDT, Martin Robinson
no flags
Updated patch which fixing HashMap assertion (8.96 KB, patch)
2010-11-01 21:37 PDT, Martin Robinson
xan.lopez: review+
Martin Robinson
Comment 1 2010-11-01 16:48:43 PDT
Created attachment 72598 [details] Patch for this issue
Xan Lopez
Comment 2 2010-11-01 16:56:08 PDT
Comment on attachment 72598 [details] Patch for this issue Looks good to me!
Martin Robinson
Comment 3 2010-11-01 17:09:58 PDT
WebKit Review Bot
Comment 4 2010-11-01 18:00:30 PDT
http://trac.webkit.org/changeset/71080 might have broken GTK Linux 64-bit Debug The following tests are not passing: http/tests/websocket/tests/alert-in-event-handler.html http/tests/websocket/tests/bad-handshake-crash.html http/tests/websocket/tests/bufferedAmount-after-close.html http/tests/websocket/tests/close-on-navigate-new-location.html http/tests/websocket/tests/close-on-unload-and-force-gc.html http/tests/websocket/tests/close-on-unload-reference-in-parent.html http/tests/websocket/tests/close-on-unload.html http/tests/websocket/tests/cross-origin.html http/tests/websocket/tests/error-detect.html http/tests/websocket/tests/frame-length-longer-than-buffer.html http/tests/websocket/tests/frame-length-overflow.html http/tests/websocket/tests/frame-length-skip.html http/tests/websocket/tests/frame-lengths.html http/tests/websocket/tests/handshake-challenge-randomness.html http/tests/websocket/tests/handshake-error.html http/tests/websocket/tests/handshake-fail-by-cross-origin.html http/tests/websocket/tests/handshake-fail-by-no-cr.html http/tests/websocket/tests/handshake-fail-by-sub-protocol-mismatch.html http/tests/websocket/tests/httponly-cookie.pl http/tests/websocket/tests/long-invalid-header.html
Martin Robinson
Comment 5 2010-11-01 21:37:49 PDT
Created attachment 72628 [details] Updated patch which fixing HashMap assertion
Xan Lopez
Comment 6 2010-11-02 08:39:17 PDT
Comment on attachment 72628 [details] Updated patch which fixing HashMap assertion r=me
Martin Robinson
Comment 7 2010-11-02 08:52:49 PDT
WebKit Review Bot
Comment 8 2010-11-02 09:46:03 PDT
http://trac.webkit.org/changeset/71119 might have broken GTK Linux 64-bit Debug The following tests are not passing: fast/text/international/plane2.html
Note You need to log in before you can comment on or make changes to this bug.