WebCore/platform/network/soup/SocketStreamHandle.h
@@ -51,6 +51,7 @@ namespace WebCore {
         void connected(GSocketConnection*, GError*);
         void readBytes(signed long, GError*);
         void writeReady();
+        void* id() { return m_id; }
 
     protected:
         virtual int platformSend(const char* data, int length);
@@ -62,6 +63,7 @@ namespace WebCore {
         PlatformRefPtr<GOutputStream> m_outputStream;
         PlatformRefPtr<GSource> m_writeReadySource;
         char* m_readBuffer;
+        void* m_id;
 
         SocketStreamHandle(const KURL&, SocketStreamHandleClient*);
 
